fix(search-map): characteristics gap and icon heart

--- a/public/scss/search-map/style.scss
+++ b/public/scss/search-map/style.scss
@@ -224,6 +224,7 @@
                                     display: flex;
                                     flex-direction: column;
                                     align-items: center;
+                                    font-size: 13px;
                                 }
                                 .icons{
                                     display: flex;
@@ -245,6 +246,7 @@
                             .characteristics{
                                 display: flex;
                                 flex-direction: column;
+                                gap: 6px;
                                 span{
                                     font-size: 19px;
                                 }
